--- a/index copy.html
+++ b/index copy.html
@@ -11,18 +11,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <style type="text/css">
-    img {
-        border-style: solid;
-        border-color: black;
-        border-width: 5px;
-        margin: 5px;
-    }
-    
-    #gifButton {
-        margin: 10px;
-    }
-    </style>
 </head>
 <div class="container">
     <!-- Jumbotron Headline -->
@@ -33,9 +21,10 @@
             </div>
         </div>
     </div>
+    <!-- Add a show Form -->
     <div class="row">
-        <!-- Form to add a show -->
-        <div class="col-lg-6">
+        <div class="col-lg-4"></div>
+        <div class="col-lg-4">
             <form>
                 <div class="form-group" id="tvshow-form">
                     <label for="tvInput">Add a TV Show:</label>
@@ -44,13 +33,15 @@
                 <button type="text" class="btn btn-default" id="addButton">Add!</button>
             </form>
         </div>
-        <!-- Show Buttons -->
-        <div class="col-lg-6">
+    </div>
+    <br>
+    <!-- Show Buttons -->
+    <div class="row">
+            <div class="col-lg-12">
             <div id="tvButtons">
             </div>
         </div>
     </div>
-    <br>
     <!-- Show Gifs -->
     <div class="row">
         <div class="col-lg-12">
