--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         border-color: black;
         border-width: 5px;
         margin: 5px;
+        
     }
-    
-    #gifButton {
-        margin: 10px;
+    button {
+        margin: 2px;
     }
     </style>
 </head>
@@ -29,7 +29,7 @@
     <div class="row">
         <div class="col-lg-12">
             <div class="jumbotron" style="text-align: center;">
-                <h1>TV Show GIF Locater!</h1>
+                <h1>The TV Show GIF Locater!</h1>
             </div>
         </div>
     </div>
@@ -44,16 +44,16 @@
                 <button type="text" class="btn btn-default" id="addButton">Add!</button>
             </form>
         </div>
-        <!-- Show Buttons -->
         <div class="col-lg-6">
+            <!-- SHOW BUTTONS-->
             <div id="tvButtons">
             </div>
         </div>
     </div>
     <br>
-    <!-- Show Gifs -->
     <div class="row">
         <div class="col-lg-12">
+            <!-- SHOW GIFS -->
             <div id="gifs-appear-here">
             </div>
         </div>
