--- a/index.html
+++ b/index.html
@@ -11,17 +11,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <style type="text/css">
-    img {
-        border-style: solid;
-        border-color: black;
-        border-width: 5px;
-        margin: 5px;
-        
-    }
-    button {
-        margin: 2px;
-    }
+
     </style>
 </head>
 <div class="container">
@@ -29,7 +21,7 @@
     <div class="row">
         <div class="col-lg-12">
             <div class="jumbotron" style="text-align: center;">
-                <h1>The TV Show GIF Locater!</h1>
+                <h1>Dave's TV Show GIF Locater!</h1>
             </div>
         </div>
     </div>
